# tamu-id-minter

./: .gitignore  README.md  coverage.py  pyproject.toml
tamu_id_minter/: __init__.py  mint.py
tamu_id_minter/crossref/: __init__.py  crossref.py  templates.py
tamu_id_minter/ezid/: ezid.py
tests/: test_crossref.py  test_crossref_xml_templates.py  test_ezid.py  test_mint.py  test_pending_publication_templates.py  test_report_templates.py
