[tool.poetry]
name = "tamu-id-minter"
version = "0.2.0"
description = ""
authors = ["Mark Baggett <markpbaggett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
click = "^8.2.1"
tqdm = "^4.67.1"
coverage = "^7.13.1"

[tool.poetry.scripts]
tamu_mint = "tamu_id_minter.mint:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
